# learn-opengl

./: CMakeLists.txt
shader/: 3.3.shader.fs  3.3.shader.vs
src/: camera.h  gl_objects.cpp  gl_objects.h  glfw_callbacks.cpp  glfw_callbacks.h  logl_globals.h  main.cpp  shader_s.h
